
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundo" >
<ScrollView 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <RelativeLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"> 
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="52dp"
        android:textSize="16sp"
        android:textColor="@color/azul"
        android:text="@string/comocadastrar" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="84dp"
        android:textSize="16sp"
        android:text="@string/titulo" />

    <EditText
        android:id="@+id/etCadastroTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/textView2"
        android:ems="8"
        android:inputType="textPersonName" >
        <requestFocus />
	</EditText>
	
    <EditText
        android:id="@+id/etCadastroSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etCadastroTitulo"
        android:layout_below="@+id/etCadastroTitulo"
        android:layout_marginTop="26dp"
        android:ems="8"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/etCadastroSenha"
        android:layout_alignBottom="@+id/etCadastroSenha"
        android:layout_alignLeft="@+id/textView2"
        android:text="@string/senha"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btAddSalvar"
        android:layout_width="140sp"
        android:layout_height="40sp"
        android:layout_below="@+id/etCadastroSenha"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:textColor="@color/branco"
        android:background="@drawable/formato_botao"
        android:text="@string/salvar" />

    <Button
        android:id="@+id/btCancela"
        android:layout_width="140sp"
        android:layout_height="40sp"
        android:layout_below="@+id/btAddSalvar"
        android:layout_marginTop="16dp"
        android:background="@drawable/formato_botao"
        android:layout_centerHorizontal="true"
        android:text="@string/cancelar"
        android:textColor="@color/branco" />
    </RelativeLayout>
</ScrollView>
</RelativeLayout>
