<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundo"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="23dp"
                android:layout_marginTop="80dp"
                android:text="@string/comoModificar"
                android:textColor="@color/azul"
                android:textSize="16sp" />
        

    		<EditText
		        android:id="@+id/etModUser"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="180sp"	        
		        android:layout_centerHorizontal="true"
		        
		        android:ems="8"
		        android:inputType="textPersonName" />

   			 <EditText
		        android:id="@+id/etModSenha"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/etModUser"
		        android:layout_centerHorizontal="true"
		        android:layout_marginTop="25dp"
		        android:inputType="textPersonName"
		        android:ems="8" />
   			 
   			 <TextView
   			     android:id="@+id/tvMod"
   			     android:layout_width="wrap_content"
   			     android:layout_height="match_parent"
   			     android:text=""
   			     android:textColor="@color/fundo"/>
   			     
   			 <Button
		        android:id="@+id/btModSalvar"
		        android:layout_width="140sp"
		        android:layout_height="40sp"
		        android:layout_below="@+id/etModSenha"
		        android:layout_marginLeft="10sp"
		        android:layout_marginTop="30sp"
		        android:textColor="@color/branco"
		        android:background="@drawable/formato_botao"		      
		        android:text="@string/salvar" />
   			 
   			 <Button
		        android:id="@+id/btModVoltar"
		        android:layout_width="140sp"
		        android:layout_height="40sp"
		        android:layout_marginTop="30sp"
		        android:layout_centerHorizontal="true"
		        android:layout_below="@+id/btModSalvar"     
		        android:text="@string/voltar"
		        android:background="@drawable/formato_botao"
		        android:textColor="@color/branco" />

   			 <Button
   			     android:id="@+id/btModDeletar"
   			     android:layout_width="140sp"
   			     android:layout_height="40sp"
   			     android:layout_alignBaseline="@+id/btModSalvar"
   			     android:layout_alignBottom="@+id/btModSalvar"
   			     android:layout_alignParentRight="true"
   			     android:layout_marginRight="10sp"
   			     
   			     android:background="@drawable/formato_botao"
   			     android:text="@string/deletar"
   			     android:textColor="@color/branco" />

		</RelativeLayout>
    </ScrollView>

    
    
</RelativeLayout>